name:                eta-neo4j-example
version:             0.1.0.0
license-file:        LICENSE
maintainer:          rasmus@precenth.eu
build-type:          Simple
cabal-version:       >=1.10

executable eta-neo4j-example
  other-modules:       Export
  main-is:             Stub.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010