name:                proc-test
version:             0.1.0.0
license-file:        LICENSE
maintainer:          rasmus@precenth.eu
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Export
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010